welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: not found: value apparition
  return apparition
         ^